--- a/package.json
+++ b/package.json
@@ -1,11 +1,45 @@
 {
+  "name": "flipbook",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+
+  "homepage": "https://OmmDevgoswami.github.io/Flipbook---Orxinus",
+
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "lint": "eslint .",
+    "generate-book": "node generateBookJson.js",
+
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
+  },
+
   "dependencies": {
+    "bootstrap": "^5.3.8",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "axios": "^1.13.2",
     "page-flip": "^2.0.7"
   },
+
   "devDependencies": {
+    "@eslint/js": "^9.39.1",
+    "@tailwindcss/postcss": "^4.1.18",
+    "@tailwindcss/vite": "^4.1.18",
+    "@types/react": "^19.2.5",
+    "@types/react-dom": "^19.2.3",
+    "@vitejs/plugin-react": "^5.1.1",
+    "eslint": "^9.39.1",
+    "eslint-plugin-react-hooks": "^7.0.1",
+    "eslint-plugin-react-refresh": "^0.4.24",
+    "globals": "^16.5.0",
+    "vite": "^7.2.4",
     "autoprefixer": "^10.4.23",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.18"
+    "tailwindcss": "^4.1.18",
+    "gh-pages": "^6.1.1"
   }
 }
