--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,8 +25,12 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      - name: Generate book.json
+        run: node generateBookJson.js
+
       - name: Build project
         run: npm run build
+
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
